# eam-architect-council

./: .env.example  .gitignore  CODEBASE_OVERVIEW.md  README.md  plan.md  pyproject.toml
eam_council/: __init__.py  __main__.py  cli.py
eam_council/council/: agentic_architecture_subagent.py  agentic_subagent.py  general_eam_subagent.py  lead_agent.py  llm.py  mock_data.py  models.py  prompts.py  runtime_config.py  sap_eam_subagent.py  skills_loader.py  telemetry.py  web_search.py
eam_council/skills/agentic_architecture/: SKILL.md
eam_council/skills/agentic_architecture/resources/: agent_design_patterns.md  agent_spec_template.md  claude_agent_sdk_guide.md  platform_comparison.md
eam_council/skills/eam_council/: SKILL.md
eam_council/skills/eam_council/resources/: output_format.md  reconciliation_rules.md
eam_council/skills/eam_glossary_entities/: SKILL.md
eam_council/skills/eam_glossary_entities/resources/: canonical_entities.yaml  glossary.md
eam_council/skills/eam_reliability_expert/: SKILL.md
eam_council/skills/eam_reliability_expert/references/: formulas.md  glossary.md  kpi_targets.md  maintenance_maturity_model.md  standards.md  vendor_docs.md
eam_council/skills/eam_spec_writer/: SKILL.md
eam_council/skills/eam_spec_writer/resources/: example_spec_work_order_scheduling.md  spec_template.md
eval/: golden_questions.md  rubric.md  run_eval.py
tests/: test_cli_smoke.py  test_context_management.py  test_orchestration.py  test_rate_throttling.py
