[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eam-architect-council"
version = "0.1.0"
description = "Multi-agent EAM Architecture Council using Claude Agent SDK"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "anthropic>=0.42.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["eam_council*"]
